--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 /* CSS Reset */
 *
 {
@@ -8,4 +9,9 @@
 html
 {
     scroll-behavior: smooth;
+}
+body
+{
+    font-family: 'Lato', sans-serif;
+    background-color: #edf2f8;
 }
