--- a/frontend/src/Components/Navbar/Navbar.module.css
+++ b/frontend/src/Components/Navbar/Navbar.module.css
@@ -56,6 +56,7 @@
     align-items: center;
     justify-content: flex-end;
     width: 30%;
+    cursor: pointer;
 }
 .profile img 
 {
@@ -64,6 +65,31 @@
     border-radius: 50%;
     padding: 5px;
     margin-right: 10px;
+}
+.select
+{
+    position: absolute;
+    right: 0px;
+    top: 60px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    background-color: #3ecf8e;
+}
+.selectLink
+{
+    text-decoration: none;
+    color: white;
+    padding: 5px;
+    font-size: 15px;
+    font-weight: 500;
+    transition: all 0.3s ease-in-out;
+} 
+.hide 
+{
+    display: none;
 }
 .burger
 {
