--- a/frontend/src/Components/TakeLoan/TakeLoan.module.css
+++ b/frontend/src/Components/TakeLoan/TakeLoan.module.css
@@ -39,7 +39,7 @@
 {
     text-align: center;
     outline: none;
-    border: none;
+    border: 2px solid black;
     color: black;
     background-color: #edf2f8;
     height: 40px;
@@ -49,6 +49,11 @@
     border-radius: 20px;
     font-size: medium;
     font-weight: 400;
+}
+.input:focus
+{
+    border-color: purple;
+    box-shadow: 0 0 5px purple;
 }
 .btn
 {
