Some Minor Changes Made - Gender Added, Aadhar replaced by Aadhaar

--- a/frontend/src/Components/Profile/CreateProfile.module.css
+++ b/frontend/src/Components/Profile/CreateProfile.module.css
@@ -16,7 +16,7 @@
     text-align: center;
     font-size: xx-large;
     font-weight: 800;
-    margin: 3px 0;
+    margin: 2px 0;
 }
 .form 
 {
@@ -47,7 +47,7 @@
     text-align: center;
     font-size: x-large;
     font-weight: 600;
-    margin: 2px 0;
+    margin: 3px 0;
 }
 .basicDetails, .acDetails
 {
@@ -65,7 +65,7 @@
     background-color: #edf2f8;
     height: 40px;
     width: 250px;
-    margin: 7px 0px;
+    margin: 5px 0px;
     padding: 5px 10px;
     border-radius: 20px;
     font-size: medium;
@@ -75,6 +75,21 @@
 {
     border-color: purple;
     box-shadow: 0 0 5px purple;
+}
+.radios
+{
+    text-align: center;
+    outline: none;
+    color: black;
+    /* height: 40px; */
+    width: 250px;
+    margin: 5px 0px;
+    font-size: small;
+    font-weight: 300;
+}
+.radio
+{
+    margin: 0 5px;
 }
 .documents
 {
@@ -89,7 +104,7 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-start;
-    margin: 5px;
+    margin: 4px;
 }
 .label
 {
@@ -109,7 +124,7 @@
     font-size: large;
     font-weight: 500;
     padding: 7px 15px;
-    margin: 7px;
+    margin: 5px;
     border: none;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
