--- a/frontend/src/Components/Profile/Profile.module.css
+++ b/frontend/src/Components/Profile/Profile.module.css
@@ -43,7 +43,7 @@
     justify-content: space-between;
     align-items: center;
 }
-.aadharPhoto, .panPhoto
+.aadhaarPhoto, .panPhoto
 {
     display: flex;
     justify-content: center;
@@ -53,7 +53,7 @@
     height: 150px;
     width: 250px;
 }
-.aadharPhoto img, .panPhoto img
+.aadhaarPhoto img, .panPhoto img
 {
     height: 100%;
     width: 100%;
