--- a/frontend/src/Components/LoanRequests/Card.module.css
+++ b/frontend/src/Components/LoanRequests/Card.module.css
@@ -22,14 +22,142 @@
     align-items: center;
     padding: 5px;
 }
+.modalContainer:after, .modalContainer:before
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+.modalContainer
+{
+    padding: 0.01em 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.modal 
+{
+    z-index: 3;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:rgba(0,0,0,0.4);
+}
+.modalContent
+{
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 10px;
+    outline: 0;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+}
+.modalHeading
+{
+    font-size: large;
+    font-weight: 700;
+    margin: 10px 0px;
+}
+.form
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.modalInput
+{
+    text-align: center;
+    outline: none;
+    border: 2px solid black;
+    color: black;
+    background-color: #edf2f8;
+    height: 40px;
+    width: 300px;
+    margin: 10px 0px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: medium;
+    font-weight: 400;
+}
+.modalInput:focus
+{
+    border-color: purple;
+    box-shadow: 0 0 5px purple;
+}
+.textarea
+{
+    border: 2px solid black;
+    border-radius: 15px;
+    outline: none;
+    padding: 10px;
+    margin: 10px 0px;
+}
+.textarea:focus
+{
+    border-color: purple;
+    box-shadow: 0 0 5px purple;
+}
+.visible
+{
+    display: block;
+}
+.hide
+{
+    display: none;
+}
+@media (max-width:600px)
+{
+    .modal
+    {
+        padding-top: 30px;
+    }
+    .modalContent
+    {
+        margin: 0 10px;
+        width: auto!important;
+        
+    }
+}
+@media (max-width:768px)
+{
+    .modal
+    {
+        padding-top: 50px;
+        
+    }
+    .modalContent
+    {
+        width: 500px;
+        
+    }
+}
+@media (min-width:993px)
+{
+    .modalContent
+    {
+        width: 900px;
+    }
+}
 .link
 {
-    color: rgb(29, 152, 201);
-    text-decoration: none;
+    color: #0088ff;
+    text-decoration: underline;
 }
 .link:hover
 {
-    text-decoration: underline;
+    color: #0766b9;
 }
 .item
 {
@@ -49,17 +177,25 @@
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
-.btn:nth-child(1)
+.acceptBtn
 {
     background-color: green;
 }
-.btn:nth-child(2)
+.rejectBtn
 {
     background-color: red;
 }
-.btn:nth-child(3)
+.modifyBtn
 {
     background-color: blue;
+}
+.cancelBtn
+{
+    background-color: red;
+}
+.submitBtn
+{
+    background-color: green;
 }
 .btn:hover
 {
