Media Query Injected for Take Loan Page and some CSS Added to App Container

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -3,4 +3,6 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
