--- a/frontend/src/Components/Navbar/Navbar.module.css
+++ b/frontend/src/Components/Navbar/Navbar.module.css
@@ -4,7 +4,8 @@
     flex-direction: row;
     position: sticky;
     top: 0;
-    z-index: 1;
+    left: 0;
+    z-index: 3;
     background-color: #3ecf8e;
     width: 100%;
     height: 73px;
