--- a/frontend/src/Components/AccountStatus/AccountStatus.module.css
+++ b/frontend/src/Components/AccountStatus/AccountStatus.module.css
@@ -65,3 +65,18 @@
 {
     transform: scale(0.8);
 }
+@media only screen and (max-width : 430px) 
+{
+    .primaryHeading
+    {
+        font-size: x-large;
+    }
+    .secondaryHeading
+    {
+        font-size: large;
+    }
+    .box 
+    {
+        width: 90%;
+    }
+}
