--- a/frontend/src/Components/AccountStatus/AccountStatus.module.css
+++ b/frontend/src/Components/AccountStatus/AccountStatus.module.css
@@ -65,6 +65,98 @@
 {
     transform: scale(0.8);
 }
+
+.modalContainer:after, .modalContainer:before
+{
+    content: "";
+    display: table;
+    clear: both;
+}
+.modalContainer
+{
+    padding: 0.01em 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.modal 
+{
+    z-index: 3;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color:rgba(0,0,0,0.4);
+}
+.modalContent
+{
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 10px;
+    outline: 0;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+}
+.modalHeading
+{
+    font-size: large;
+    font-weight: 700;
+    margin: 10px 0px;
+}
+.form
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.modalInput
+{
+    text-align: center;
+    outline: none;
+    border: 2px solid black;
+    color: black;
+    background-color: #edf2f8;
+    height: 40px;
+    width: 300px;
+    margin: 10px 0px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: medium;
+    font-weight: 400;
+}
+.modalInput:focus
+{
+    border-color: purple;
+    box-shadow: 0 0 5px purple;
+}
+.visible
+{
+    display: block;
+}
+.hide
+{
+    display: none;
+}
+.cancelBtn
+{
+    background-color: red;
+}
+.submitBtn
+{
+    background-color: green;
+}
+
 @media only screen and (max-width : 430px) 
 {
     .primaryHeading
