--- a/frontend/src/Components/PrivacyPolicy/PrivacyPolicy.module.css
+++ b/frontend/src/Components/PrivacyPolicy/PrivacyPolicy.module.css
@@ -29,9 +29,36 @@
 
 @media screen and (min-width:1500px) {
     .title{
-        font-size:50px
+        font-size:50px;
     }
     .imageContainer{
-        height:500px
+        height:500px;
+    }
+}
+@media screen and (max-width:600px) {
+    .primaryHeading
+    {
+        font-size: x-large;
+    }
+    .secondaryHeading
+    {
+        font-size: large;
+    }
+}
+@media screen and (max-width:450px) {
+    .mainContainer
+    {
+        margin: 20px 10px;
+    }
+    .title{
+        font-size:25px;
+    }
+    .primaryHeading
+    {
+        font-size: large;
+    }
+    .secondaryHeading
+    {
+        font-size: medium;
     }
 }
