Media Query Injected for Forget Password Page and some other minor change in password reset process

--- a/frontend/src/Components/ForgetPassword/ForgetPassword.module.css
+++ b/frontend/src/Components/ForgetPassword/ForgetPassword.module.css
@@ -53,7 +53,7 @@
     background-color: #edf2f8;
     height: 40px;
     width: 250px;
-    margin: 20px 0px;
+    margin: 10px 0px;
     padding: 5px 10px;
     border-radius: 20px;
     font-size: medium;
@@ -89,4 +89,24 @@
 .btn:active
 {
     transform: scale(0.8);
+}
+
+/* Media Query for Responsiveness */
+@media only screen and (max-width : 400px) 
+{
+  .card
+  {
+    width: 85%;
+  }
+}
+@media only screen and (max-width : 300px) 
+{
+  .card
+  {
+    width: 90%;
+  }
+  .input
+  {
+    width: 95%;
+  }
 }
