--- a/frontend/src/Components/Profile/Profile.module.css
+++ b/frontend/src/Components/Profile/Profile.module.css
@@ -136,3 +136,88 @@
     /* text-decoration: underline; */
     margin: 5px 0px;
 }
+
+/* Media Query for Responsiveness */
+@media only screen and (max-width : 1075px) 
+{
+    .container
+    {
+        flex-direction: column;
+        width: 80%;
+    }
+    .right, .left
+    {
+        width: 100%;
+        align-items: center;
+    }
+    .detail, .heading
+    {
+        text-align: center;
+    }
+}
+@media only screen and (max-width : 675px) 
+{
+    .container
+    {
+        width: 95%;
+    }
+}
+@media only screen and (max-width : 575px) 
+{
+    .aadhaarPhoto, .panPhoto
+    {
+        width: 45%;
+        height: auto;
+    }
+    .slipsPhoto
+    {
+        width: 95%;
+        height: auto;
+    }
+    .aadhaarPhoto img, .panPhoto img, .slipsPhoto img
+    {
+        height: auto;
+    }
+    .detail
+    {
+        font-size: large;
+    }
+}
+@media only screen and (max-width : 425px) 
+{
+    .documentsPhoto
+    {
+        flex-direction: column;
+    }
+    .aadhaarPhoto, .panPhoto
+    {
+        width: 75%;
+    }
+    .heading
+    {
+        font-size: x-large;
+        font-weight: 600;
+    }
+    .detail
+    {
+        font-size: medium;
+        font-weight: 400;
+    }
+}
+@media only screen and (max-width : 275px) 
+{
+    .aadhaarPhoto, .panPhoto
+    {
+        width: 90%;
+    }
+    .heading
+    {
+        font-size: large;
+        font-weight: 500;
+    }
+    .detail
+    {
+        font-size: small;
+        font-weight: 400;
+    }
+}
