Responsiveness issue resolved from Home Page

--- a/frontend/src/Components/Home/Home.module.css
+++ b/frontend/src/Components/Home/Home.module.css
@@ -26,7 +26,6 @@
 
 .middleContainer{
   margin:60px 20px;
-  
 }
 
 .middleTitle{
@@ -139,6 +138,7 @@
   }
   .middleContainer {
     width: 95%;
+    margin:60px auto;
   }
   .middleMainContainer {
     width: 100%;
