--- a/frontend/src/Components/Home/Home.module.css
+++ b/frontend/src/Components/Home/Home.module.css
@@ -37,7 +37,7 @@
 
 .middleTitle,.titleAbout{
   text-align: center;
-  font-size:60px;
+  font-size:50px;
   margin-bottom:40px;
 }
 
@@ -73,6 +73,11 @@
   color: white;
 }
 
+.mainAboutContainer{
+  padding-top:30px;
+  background-color:white;
+  padding-bottom:40px
+}
 
 .imageContainerAbout{
   margin: 30px 0px;
