Integrtion stated with backened after design changes

--- a/frontend/src/Components/ForgetPassword/ForgetPassword.module.css
+++ b/frontend/src/Components/ForgetPassword/ForgetPassword.module.css
@@ -1,4 +1,12 @@
 /* Card Component Styling */
+.coverContainer{
+  margin-top:73px;
+  min-height:calc(100vh - 135px - 73px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .card
 {
   /* background-color: rgb(24,24,24); */
@@ -11,6 +19,7 @@
   align-items: center;
   box-shadow: 10px 10px 5px #dde2e9;
   margin: 10px;
+  margin-top: 20px;
 }
 .heading
 {
@@ -19,7 +28,7 @@
   font-weight: lighter;
   font-family: 'Roboto', sans-serif;
   margin: 10px;
-  text-decoration: underline;
+  /* text-decoration: underline; */
 }
 .formGroup
 {
@@ -68,9 +77,10 @@
 /* Btn Component Styling */
 .btn
 {
+  width:250px;
     outline: none;
     text-align: center;
-    background-color: #3ecf8e;
+    background-color: #4a89d9;
     border-radius: 15px;
     color: white;
     font-size: large;
@@ -92,6 +102,11 @@
 }
 
 /* Media Query for Responsiveness */
+@media screen and (max-width:500px) {
+  .coverContainer{
+      min-height:calc(100vh - 255px - 73px)
+  }
+}
 @media only screen and (max-width : 400px) 
 {
   .card
