--- a/frontend/src/Components/AccountStatus/AccountStatus.module.css
+++ b/frontend/src/Components/AccountStatus/AccountStatus.module.css
@@ -1,9 +1,10 @@
 .primaryHeading
 {
-    background-color: #79DAE8;
+    background-color: #4a89d9;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    height: 50px;
+    height: 61px;
+    color: #fff;
     text-align: center;
     display: flex;
     align-items: center;
@@ -21,19 +22,24 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    margin-top: 73px;
     align-items: center;
+    min-height:calc(100vh - 135px - 73px);
+    padding:30px 0px;
+    justify-content:center
 }
 .box 
 {
     width: 400px;
-    margin: auto;
+    /* margin: auto; */
     background-color: #e4e9f0;
     border-radius: 10px;
+    padding-bottom: 20px;
 }
 .innerBox 
 {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -45,12 +51,14 @@
 {
     outline: none;
     text-align: center;
-    background-color: #3ecf8e;
-    border-radius: 15px;
+    background-color: #4a89d9;
+    border-radius: 5px;
     color: white;
     font-size: large;
     font-weight: 500;
-    padding: 7px 15px;
+    /* padding: 7px 15px; */
+    width:150px;
+    height:40px;
     margin: 7px;
     border: none;
     cursor: pointer;
@@ -60,6 +68,7 @@
 {
     transform: translateY(-1px);
     color: rgb(247, 234, 234);
+    background-color:#2066c1
 }
 .btn:active
 {
@@ -156,6 +165,11 @@
 {
     background-color: green;
 }
+@media screen and (max-width: 500px){
+    .container{
+        min-height:calc(100vh - 255px - 73px);;
+    }
+}
 
 @media only screen and (max-width : 430px) 
 {
@@ -169,6 +183,9 @@
     }
     .box 
     {
-        width: 90%;
+        width: 300px;
+    }
+    .btn{
+        width:100px
     }
 }
