--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
 {
     margin-top: 20px;
     padding: 10px;
-    background-color: #3ecf8e;
+    background-color: #4a89d9;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -49,7 +49,7 @@
 .link
 {
     text-decoration: none;
-    /* color: white; */
+    color: white;
     padding: 5px;
     font-size: medium;
     font-weight: 500;
@@ -57,7 +57,8 @@
 } 
 .link:hover
 {
-    text-decoration: underline;
+    cursor: pointer;
+    background-color:#2168c6
 }
 
 /* Media Query Responsiveness */
