--- a/frontend/src/Components/Home/Home.module.css
+++ b/frontend/src/Components/Home/Home.module.css
@@ -1,5 +1,6 @@
 .mainContainer{
   width: 100%;
+  margin-top: 73px;
 }
 
 .topContainer {
@@ -12,20 +13,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .title {
-  color: #00d676;
-  background: -webkit-linear-gradient(
-    189.94deg,
-    #009150 -25.33%,
-    #81ffc6 120.28%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #4a89d9;
   text-align: center;
   font-size: 60px;
+  background-color: #fdf9fa;
 }
 
 .middleContainer{
@@ -39,6 +34,7 @@
   text-align: center;
   font-size:50px;
   margin-bottom:40px;
+  color: #4a89d9;
 }
 
 .middleMainContainer {
@@ -57,7 +53,7 @@
   height: 450px;
   border-radius: 8px;
   margin: 30px;
-  background-color: rgb(45, 215, 82);
+  background-color: #4a89d9;
 }
 .cardImage {
   width: 500px;
@@ -177,11 +173,12 @@
     font-size: x-large;
   }
   .cardMainContainer {
-    width: 100%;
+    width: 320px;
+    margin: 30px 0px;
   }
   .middleContainer {
-    width: 95%;
-    margin:60px auto;
+    width: 100%;
+    margin:60px 0px;
   }
   .middleMainContainer {
     width: 100%;
@@ -198,8 +195,12 @@
   .title {
     font-size: x-large;
   }
+  .cardMainContainer {
+    width: 280px;
+    margin: 20px 0px;
+  }
   .cardText
   {
-    font-size: large;
+    font-size: 24px;
   }
 }
