--- a/frontend/src/Components/LoanRequests/Card.module.css
+++ b/frontend/src/Components/LoanRequests/Card.module.css
@@ -1,25 +1,41 @@
 .card
 {
-    background-color: rgb(245, 204, 245);
-    color: black;
+    background-color: #4a89d9;
+    color: white;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: fit-content;
-    margin: 10px;
+    width: 400px;
+    margin: 30px 10px;
     height: fit-content;
     font-size: large;
-    font-weight: 600;
+    font-weight: 500;
     padding: 10px;
+    padding-top:0px;
 }
+.cardImage{
+    width: 400px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+.table{
+    width: 100%;
+    padding: 5px;
+}
+.tableRow{
+    height:30px;
+    font-size:20px
+}
+
 .row
 {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
     padding: 5px;
 }
 .modalContainer:after, .modalContainer:before
@@ -30,7 +46,7 @@
 }
 .modalContainer
 {
-    padding: 0.01em 16px;
+    /* padding: 0.01em 16px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -134,8 +150,9 @@
 {
     outline: none;
     text-align: center;
-    border-radius: 15px;
+    border-radius: 5px;
     color: white;
+    width:100%;
     font-size: large;
     font-weight: 500;
     padding: 7px 15px;
@@ -143,6 +160,27 @@
     border: none;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
+}
+.knowDiv{
+    width: 100%;
+    margin: 10px 0px;
+}
+.btnKnow{
+    background: royalblue;
+    color: #fff;
+    font-size: 18px;
+    width: 100%;
+    padding: 7px 15px;
+    outline:none;
+    border: none;
+    border-radius: 5px;
+    font-size: large;
+    font-weight: 500;
+    transition: all 0.3s ease-in-out;
+}
+.btnKnow:hover{
+    cursor: pointer;
+    background:rgb(41, 72, 167)
 }
 .acceptBtn
 {
@@ -202,13 +240,24 @@
         width: auto!important;
         
     }
-    .row
+    /* .row
     {
         flex-direction: column;
-    }
-    .btn, .item
+    } */
+     .item
     {
         margin: 5px;
+    }
+}
+@media screen and (max-width:420px){
+    .card{
+        width:300px
+    }
+    .cardImage{
+        width: 300px;
+    }
+    .btn{
+        padding:7px 7px
     }
 }
 @media only screen and (max-width:400px)
@@ -233,8 +282,5 @@
         font-weight: lighter;
         padding: 5px;
     }
-    .card
-    {
-        width: 80%;
-    }
+   
 }
