--- a/frontend/src/Components/Navbar/Navbar.module.css
+++ b/frontend/src/Components/Navbar/Navbar.module.css
@@ -1,11 +1,11 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 3;
-  background-color: #3ecf8e;
+  background-color: #4a89d9;
   width: 100%;
   height: 73px;
   transition-property: all;
@@ -44,7 +44,7 @@
   transition: all 0.3s ease-in-out;
 }
 .link:hover {
-    background-color: #279a66;
+    background-color: #3578ce;
     cursor: pointer;
     border-radius: 4px;
 }
@@ -61,6 +61,7 @@
   border-radius: 50%;
   padding: 5px;
   margin-right: 10px;
+  border: 1px solid #fff;
 }
 .select {
   position: absolute;
@@ -71,7 +72,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-color: #3ecf8e;
+  background-color: #4a89d9;
+  border-radius: 5px ;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 1px 0px rgb(255 255 255 / 30%);
 }
 .selectLink {
     width: 100%;
@@ -83,7 +86,7 @@
   transition: all 0.3s ease-in-out;
 }
 .selectLink:hover{
-    background-color: #279a66;
+    background-color: #195eb9;
     cursor: pointer;
 }
 .hide {
@@ -102,6 +105,40 @@
 .burger:hover{
     cursor: pointer;
 }
+
+Try This Cross In CSS
+
+.close {
+  position: absolute;
+  right: 10px;
+  top: 21px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.3;
+  margin: 21px 10px;
+}
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  /* left: 15px; */
+  content: ' ';
+  top: 0;
+  right: 20px;
+  height: 33px;
+  width: 4px;
+  background-color: #fff;
+  
+  transition: ease-in-out 0.3s;
+  margin: 21px 10px;
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
 .line {
   border: 2px solid white;
   border-radius: 3px;
@@ -119,7 +156,7 @@
     border-radius:5px;
     outline: none;
     border: none;
-    background-color:#00c76d;
+    background-color:#4a89d9;
     margin-right: 30px;
     color: #fff;
     font-size:20px;
@@ -127,7 +164,7 @@
 }
 .btnLogin:hover{
     cursor: pointer;
-    background-color: #01b463
+    background-color:#165bb5
 }
 
 /* Responsive Navbar */
@@ -171,7 +208,7 @@
     height: 40px;
   }
   .link:hover{
-      background-color: #279a66;
+      background-color: #145ab6;
       cursor: pointer;
   }
   .select {
