--- a/frontend/src/Components/Profile/CreateProfile.module.css
+++ b/frontend/src/Components/Profile/CreateProfile.module.css
@@ -1,3 +1,11 @@
+.coverContainer{
+    margin-top:73px;
+    min-height:calc(100vh - 135px - 73px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
 .container
 {
     display: flex;
@@ -10,6 +18,7 @@
     width: 65%;
     margin: 5px auto;
     padding: 5px;
+    margin-top:20px
 }
 .primaryHeading
 {
@@ -190,6 +199,9 @@
     .imgInp
     {
         width: 190px;
+    }
+    .coverContainer{
+        min-height:calc(100vh - 255px - 73px)
     }
 }
 @media only screen and (max-width : 375px)
