--- a/frontend/src/Components/AccountStatus/AccountStatus.module.css
+++ b/frontend/src/Components/AccountStatus/AccountStatus.module.css
@@ -21,7 +21,7 @@
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin-top: 73px;
     align-items: center;
     min-height:calc(100vh - 135px - 73px);
@@ -165,6 +165,15 @@
 {
     background-color: green;
 }
+
+.loanStatus
+{
+    display: flex;
+    flex-direction: wrap;
+    width: 99%;
+    margin: 15px auto;
+}
+
 @media screen and (max-width: 500px){
     .container{
         min-height:calc(100vh - 255px - 73px);;
