--- a/frontend/src/Components/Profile/PublicProfile.module.css
+++ b/frontend/src/Components/Profile/PublicProfile.module.css
@@ -10,10 +10,10 @@
 {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 500px;
     justify-content: center;
     align-items: center;
-    border: 2px solid purple;
+    border: 2px solid #4a89d9;
     border-radius: 20px;
     margin: 10px auto;
     margin-top: 25px;
@@ -24,8 +24,9 @@
     text-align: center;
     font-size: xx-large;
     font-weight: 800;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     margin: 5px 0px;
+    color: #4a89d9;
 }
 .profilePhoto
 {
@@ -33,7 +34,7 @@
     justify-content: center;
     align-items: center;
     /* border-radius: 50%; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: 5px;
     height: 100px;
     width: 100px;
@@ -42,35 +43,30 @@
 {
     height: 100%;
     width: 100%;
+    border-radius:50% ;
 }
 .details
 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
 }
 .detail
 {
-    text-align: center;
+    text-align: left;
     font-size: x-large;
     font-weight: 500;
-    margin: 5px 0px;
+    margin: 5px 4px;
 }
 
 /* Media Query for Responsiveness */
-@media only screen and (max-width : 930px) 
+
+@media only screen and (max-width : 550px) 
 {
     .container
     {
-        width: 60%;
+        width: 400px;
     }
-}
-@media only screen and (max-width : 630px) 
-{
-    .container
-    {
-        width: 80%;
+    .detail{
+        font-size:18px
     }
 }
 @media screen and (max-width:500px) {
@@ -78,18 +74,17 @@
         min-height:calc(100vh - 255px - 73px)
     }
 }
-@media only screen and (max-width : 475px) 
+@media only screen and (max-width : 420px) 
 {
-    .container
-    {
-        width: 98%;
+    .container{
+        width:95%;
     }
 }
-@media only screen and (max-width : 375px) 
-{
-    .detail
-    {
-        font-size: large;
-        font-weight: 400;
+@media screen and (max-width :390px){
+    .detail{
+        font-size:14px
+    }    
+    .container{
+        width:98%
     }
 }
