--- a/frontend/src/Components/Footer/Footer.module.css
+++ b/frontend/src/Components/Footer/Footer.module.css
@@ -1,3 +1,14 @@
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+  }
+  .logo img {
+    border-radius: 50%;
+  }
+  
+
 .footer
 {
     margin-top: 20px;
@@ -16,21 +27,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.logo
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60px;
-    height: 60px;
-}
-.logo img
-{
-    width : 100%;
-    height: 100%;
-    border-radius: 50%;
-    margin: 5px;
 }
 .companyName
 {
