--- a/frontend/src/Components/Navbar/Navbar.module.css
+++ b/frontend/src/Components/Navbar/Navbar.module.css
@@ -1,3 +1,7 @@
+.mainContainer{
+  width: 100%;
+  font-family: Roboto;
+}
 .navbar {
   display: flex;
   flex-direction: row;
@@ -20,7 +24,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* width: 20%; */
+  width: 70px;
+}
+.logo img {
+  border-radius: 50%;
+}
+
+
+
+/* .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .logo img {
   width: 50px;
@@ -29,7 +44,7 @@
   margin: 5px;
   margin-left: 15px;
   margin-top: 12px;
-}
+} */
 
 .navList li {
   list-style: none;
