minor css errors removed

--- a/frontend/src/Components/LoginSignUp/LoginSignUp.module.css
+++ b/frontend/src/Components/LoginSignUp/LoginSignUp.module.css
@@ -10,7 +10,7 @@
 
 /* Container Styling */
 .coverContainer{
-  margin-top:73px;
+  /* margin-top:73px; */
   min-height:calc(100vh - 135px - 73px);
   display: flex;
   align-items: center;
